--- a/inbox.ui
+++ b/inbox.ui
@@ -6,77 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>864</width>
+    <width>1582</width>
     <height>657</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_4">
-   <item>
-    <widget class="QToolBox" name="toolBox_2">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="currentIndex">
-      <number>0</number>
-     </property>
-     <widget class="QWidget" name="page">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>-73</y>
-        <width>821</width>
-        <height>204</height>
-       </rect>
-      </property>
-      <attribute name="label">
-       <string>Soạn tin nhắn</string>
-      </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout_6">
-       <item>
-        <layout class="QVBoxLayout" name="verticalLayout">
-         <item>
-          <widget class="QLineEdit" name="tuaDe">
-           <property name="placeholderText">
-            <string>Tựa đề</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QComboBox" name="nguoiNhan">
-           <property name="editable">
-            <bool>true</bool>
-           </property>
-           <property name="insertPolicy">
-            <enum>QComboBox::NoInsert</enum>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPlainTextEdit" name="loiNhan">
-           <property name="placeholderText">
-            <string>Lời nhắn</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="guiButton">
-           <property name="text">
-            <string>Gửi</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-      </layout>
-     </widget>
-    </widget>
-   </item>
+  <layout class="QHBoxLayout" name="horizontalLayout_3">
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
@@ -89,8 +26,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>840</width>
-          <height>214</height>
+          <width>775</width>
+          <height>540</height>
          </rect>
         </property>
         <attribute name="label">
@@ -142,8 +79,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>840</width>
-          <height>214</height>
+          <width>775</width>
+          <height>540</height>
          </rect>
         </property>
         <attribute name="label">
@@ -162,15 +99,84 @@
          </item>
         </layout>
        </widget>
+       <widget class="QWidget" name="soanTinNhanPage">
+        <attribute name="label">
+         <string>Soạn tin nhắn</string>
+        </attribute>
+        <layout class="QVBoxLayout" name="verticalLayout_6">
+         <item>
+          <layout class="QVBoxLayout" name="verticalLayout">
+           <item>
+            <widget class="QLineEdit" name="tuaDe">
+             <property name="placeholderText">
+              <string>Tựa đề</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QComboBox" name="nguoiNhan">
+             <property name="editable">
+              <bool>true</bool>
+             </property>
+             <property name="insertPolicy">
+              <enum>QComboBox::NoInsert</enum>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPlainTextEdit" name="loiNhan">
+             <property name="placeholderText">
+              <string>Lời nhắn</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="guiButton">
+             <property name="text">
+              <string>Gửi</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </widget>
       </widget>
      </item>
     </layout>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout_3"/>
-   </item>
-   <item>
-    <widget class="QTextEdit" name="loiNhanTextEdit"/>
+    <widget class="QFrame" name="hienThiTinNhan">
+     <layout class="QVBoxLayout" name="xemTinNhan">
+      <item>
+       <widget class="QLineEdit" name="tieuDeLineEdit">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+        <property name="placeholderText">
+         <string>Tiêu đề</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="nguoiGuiLineEdit">
+        <property name="placeholderText">
+         <string>Người gửi/Người nhận</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPlainTextEdit" name="loiNhanTextEdit">
+        <property name="plainText">
+         <string/>
+        </property>
+        <property name="placeholderText">
+         <string>Lời nhắn</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
    </item>
   </layout>
  </widget>
