--- a/introform.ui
+++ b/introform.ui
@@ -210,6 +210,9 @@
                  <property name="echoMode">
                   <enum>QLineEdit::Password</enum>
                  </property>
+                 <property name="clearButtonEnabled">
+                  <bool>true</bool>
+                 </property>
                 </widget>
                </item>
               </layout>
