--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -215,7 +215,7 @@ color: white;
 }</string>
         </property>
         <property name="currentIndex">
-         <number>1</number>
+         <number>2</number>
         </property>
         <widget class="QWidget" name="sachPage">
          <property name="enabled">
@@ -1072,8 +1072,14 @@ color: black;</string>
                       <property name="text">
                        <string/>
                       </property>
+                      <property name="echoMode">
+                       <enum>QLineEdit::Password</enum>
+                      </property>
                       <property name="placeholderText">
                        <string>Mật khẩu</string>
+                      </property>
+                      <property name="clearButtonEnabled">
+                       <bool>true</bool>
                       </property>
                      </widget>
                     </item>
