--- a/inbox.ui
+++ b/inbox.ui
@@ -68,6 +68,9 @@
              <property name="selectionBehavior">
               <enum>QAbstractItemView::SelectRows</enum>
              </property>
+             <attribute name="horizontalHeaderStretchLastSection">
+              <bool>true</bool>
+             </attribute>
             </widget>
            </item>
           </layout>
@@ -95,6 +98,9 @@
            <property name="selectionBehavior">
             <enum>QAbstractItemView::SelectRows</enum>
            </property>
+           <attribute name="horizontalHeaderStretchLastSection">
+            <bool>true</bool>
+           </attribute>
           </widget>
          </item>
         </layout>
@@ -173,6 +179,13 @@
         </property>
         <property name="placeholderText">
          <string>Người gửi/Người nhận</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="thoiGianLineEdit">
+        <property name="placeholderText">
+         <string>Thời gian</string>
         </property>
        </widget>
       </item>
