--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -229,6 +229,11 @@ color: white;
            <height>696</height>
           </rect>
          </property>
+         <property name="styleSheet">
+          <string notr="true">#sachPage {
+	background-color: #f8f9fa;
+}</string>
+         </property>
          <attribute name="icon">
           <iconset resource="resources.qrc">
            <normaloff>:/media/icons/Pixel perfect/books.png</normaloff>:/media/icons/Pixel perfect/books.png</iconset>
@@ -302,6 +307,11 @@ color: white;
              </item>
              <item>
               <widget class="QTabWidget" name="tabWidget_2">
+               <property name="font">
+                <font>
+                 <pointsize>12</pointsize>
+                </font>
+               </property>
                <property name="currentIndex">
                 <number>0</number>
                </property>
@@ -481,6 +491,11 @@ color: white;
                 <layout class="QVBoxLayout" name="verticalLayout_23">
                  <item>
                   <widget class="QPlainTextEdit" name="noiDungSach">
+                   <property name="font">
+                    <font>
+                     <pointsize>12</pointsize>
+                    </font>
+                   </property>
                    <property name="frameShape">
                     <enum>QFrame::NoFrame</enum>
                    </property>
@@ -588,7 +603,7 @@ color: white;
 border-bottom-left-radius: 5px;
 border-style: outset;
 border-color: rgb(72, 72, 72);
-background-color: #f8f9fa;
+background-color: #f1f3f5;
 color: black;</string>
                 </property>
                 <property name="placeholderText">
@@ -612,7 +627,7 @@ color: black;</string>
 border-bottom-right-radius: 5px;
 border-style: outset;
 border-color: rgb(72, 72, 72);
-background-color: #f8f9fa;
+background-color: #f1f3f5;
 color: red;</string>
                 </property>
                 <property name="text">
@@ -688,6 +703,11 @@ color: black;</string>
            <width>1399</width>
            <height>696</height>
           </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">#muonSachPage {
+	background-color: #f8f9fa;
+}</string>
          </property>
          <attribute name="icon">
           <iconset resource="resources.qrc">
@@ -882,6 +902,19 @@ color: black;</string>
                 </property>
                </widget>
               </item>
+              <item>
+               <spacer name="verticalSpacer">
+                <property name="orientation">
+                 <enum>Qt::Vertical</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>20</width>
+                  <height>40</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
              </layout>
             </item>
            </layout>
@@ -896,6 +929,11 @@ color: black;</string>
            <width>1399</width>
            <height>696</height>
           </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">#thanhVienPage {
+	background-color: #f8f9fa;
+}</string>
          </property>
          <attribute name="icon">
           <iconset resource="resources.qrc">
@@ -1335,7 +1373,7 @@ color: black;</string>
 border-bottom-left-radius: 5px;
 border-style: outset;
 border-color: rgb(72, 72, 72);
-background-color: #f8f9fa;
+background-color: #f1f3f5;
 color: black;</string>
                 </property>
                 <property name="text">
@@ -1362,7 +1400,7 @@ color: black;</string>
 border-bottom-right-radius: 5px;
 border-style: outset;
 border-color: rgb(72, 72, 72);
-background-color: #f8f9fa;
+background-color: #f1f3f5;
 color: red;</string>
                 </property>
                 <property name="text">
